# dicto

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  deploy_k8s.sh  pyproject.toml  requirements.txt
.github/workflows/: deploy-with-approval.yml  test.yml
k8s/: deployment-local.yaml  deployment-prod.yaml  secret.example.yaml  secret.yaml  service.yaml
tests/: conftest.py  test_file_handling.py  test_markdown_conversion.py  test_views.py
website/: __init__.py  pdf_generator.py  process_audio.py  utils.py  views.py
website/static/css/: style.css
website/static/js/: script.js
website/templates/: home.html  layout.html
