[tool.poetry]
name = "dicto"
version = "0.1.0"
description = "Voice-to-summary web application"
authors = ["Joe Foster <joe.foster@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-cors = "^4.0.0"
openai = "^1.0.0"
python-dotenv = "^1.0.1"
pydub = "^0.25.1"
gunicorn = "^21.0.0"
reportlab = "^4.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"